componentes tal atope

--- a/07_angular/una-web/src/app/heros-li/heros-li.component.html
+++ b/07_angular/una-web/src/app/heros-li/heros-li.component.html
@@ -1,7 +1,10 @@
-<p>Listado de heroes</p>
+<h2>Listado de heroes</h2>
+<app-hero-detail [hero] = "selectedHero"></app-hero-detail>
+
 <ul class="ul-heroes">
-    <li *ngFor = "let hero of heroes">
+    <li *ngFor = "let hero of heroes" [class.hero-selected] = "hero === selectedHero" (click)="onSelect(hero)">
         <span class="li-heroe">{{ hero.id }}</span> {{ hero.name }}
-         <img src="{{hero.imagen}}"/>
+         <img class="img-heroe" src="{{hero.imagen}}"/>
+       <!--  <app-hero-detail [hero]="hero"></app-hero-detail> -->
     </li>
 </ul>
