--- a/07_angular/una-web/src/styles.css
+++ b/07_angular/una-web/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+.img-heroe{
+    width: 100px; height:75px;
+}
+h1{
+    color: #336699;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+}
+h2,h3{
+    color: #444444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+body{ margin: 2em;}
+body, input[text="text"], button{
+    color: #333333;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
