--- a/07_angular/una-web/src/app/new-hero/new-hero.component.html
+++ b/07_angular/una-web/src/app/new-hero/new-hero.component.html
@@ -2,9 +2,11 @@
 <h1>Añadir heroe</h1>
 
     <!-- <input [(ngModel)]="idHeroe" placeholder="Write the id"/>-->
-    <input [(ngModel)]="nombreHeroe" placeholder="Write the namee"/>
+    <label for="name">Name:</label>
+    <input [(ngModel)]="nombreHeroe" placeholder="Write the name"/><br/>
    <!-- <input id="name" placeholder="Write the name"/>-->
-    <input id="ruta" placeholder="Write the ruta"/>
+   <label for="id">Ruta:</label>
+    <input id="ruta" [(ngModel)]="nombreRuta" placeholder="Write the ruta"/><br/>
    <!-- <button (click)="heroSrv.addHero(idHeroe, nombreHeroe,'../assets/images/ironMan.jpg')">Crear</button>-->
     <button (click)="heroSrv.addHero(nombreHeroe,'../assets/images/ironMan.jpg')">Crear</button>
     
