--- a/07_angular/una-web/src/app/app.component.html
+++ b/07_angular/una-web/src/app/app.component.html
@@ -1,16 +1,15 @@
 <h1>Una web</h1>
-<h2>{{title}}</h2>
-
+<h2>{{ title }}</h2>
+<app-hero-rest></app-hero-rest>
 <nav>
-    <a routerLink="/dashboard">Home!</a><br/>
-  <a routerLink="/heroes">Show listt!</a><br/>
-  <a routerLink="/newHero">Add new hero!</a>
+    <a routerLink="/dashboard">Home</a> - 
+    <a routerLink="/heroes">Show list!</a> - 
+    <a routerLink="/newhero">New hero</a> - 
 </nav>
 <router-outlet></router-outlet>
-<!--
+<!-- 
 <div><app-mi-control></app-mi-control></div>
-<div> <app-heros-li></app-heros-li></div>
 <app-new-hero></app-new-hero>
+<app-heros-list></app-heros-list>
 -->
-<app-messages></app-messages>
-
+<app-messages></app-messages>   
