--- a/07_angular/una-web/src/app/dashboard/dashboard.component.css
+++ b/07_angular/una-web/src/app/dashboard/dashboard.component.css
@@ -1,12 +1,10 @@
-
-.grid{
+.grid {
     display: inline-block;
     width: 80%;
     text-align: center;
 }
-
-.wid-25{
+.wid-25 {
     width: 25%;
-    border: 1px solid #dddddd;
+    border: 1px solid #cccccc;
     display: inline-block;
 }
