--- a/07_angular/una-web/src/app/mi-control/mi-control.component.html
+++ b/07_angular/una-web/src/app/mi-control/mi-control.component.html
@@ -1,7 +1,5 @@
-<p>funcionaa {{propiedadHola}}</p>
-
-<p> Probando obj: {{hero.id}} <br/> {{hero.name | uppercase}}
+<p>mi-control funciona! {{ propiedadHola }}</p>
+<p>Probando obj: {{ hero.id}} <br/> {{ hero.name | uppercase}}
 </p>
-
-<input [(ngModel)] = "hero.name" placeholder="Nombre"/>
-<input [(ngModel)] = "hero.name" placeholder="Nombre"/>
+<input [(ngModel)]="hero.name" placeholder="Nombre"/>
+<input [(ngModel)]="hero.name" placeholder="Nombre"/>
