--- a/07_angular/una-web/src/app/hero-detail/hero-detail.component.html
+++ b/07_angular/una-web/src/app/hero-detail/hero-detail.component.html
@@ -1,9 +1,10 @@
 <div class="div-marco" *ngIf="hero">
-    <!-- Solo se crea si hero tiene algun valor -->
-    <h2>{{hero.name | uppercase }} details</h2>
-    <div><span>Id: </span>{{ hero.id }}</div>
+    <!-- Sólo se crea si hero tiene algún valor -->
+    <h2>{{ hero.name | uppercase }} details</h2>
+    <div><span>Id: </span> {{ hero.id }}</div>
     <div>
         <label>Name: </label>
         <input [(ngModel)]="hero.name" placeholder="Write the name"/>
     </div>
+
 </div>
