--- a/practica_angular/practicaAngular/src/app/listado/listado.component.html
+++ b/practica_angular/practicaAngular/src/app/listado/listado.component.html
@@ -1,1 +1,10 @@
-<p>listado works!</p>
+<h2>Listado de personas</h2>
+
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
+
+<ul>
+    <li *ngFor = "let persona of listaPersona">
+        <span>lalalala</span>
+        <span>{{ persona.name }} </span> {{ persona.email }}
+    </li>
+</ul>
