--- a/practica_angular/practicaAngular/src/app/listado/listado.component.html
+++ b/practica_angular/practicaAngular/src/app/listado/listado.component.html
@@ -4,7 +4,8 @@
 <app-persona-detalle [persona] = "personaSeleccionada"></app-persona-detalle>
 <ul>
     <li *ngFor = "let persona of personasRecibidas">
-        <span>{{ persona.id }} {{ persona.name }}  {{ persona.email }}</span>
+        <span>Id: {{ persona.id }} | Nombre: {{ persona.name }} | email: {{ persona.email }} | Edad: {{ persona.age }}</span>
         <a (click)="personaSeleccionada = persona">(+)</a>
+        <a (click)="eliminar(persona)">Delete</a>
      </li>
 </ul>
