--- a/practica_angular/practicaAngular/src/app/menu/menu.component.html
+++ b/practica_angular/practicaAngular/src/app/menu/menu.component.html
@@ -1,6 +1,12 @@
-<h1>PRACTICA ANGULAR</h1>
-<h2>MENU</h2>
-<nav>
-    <a routerLink="/registro">Registrar nuevo Usuario</a> - 
-    <a routerLink="/listado">Lista de Usuarios Registrados</a> - 
-</nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">PRACTICA ANGULAR</div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">MENU</div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6"><a routerLink="/registro">Registrar nuevo Usuario</a></div> 
+        <div class="col-sm-6"><a routerLink="/listado">Lista de Usuarios Registrados</a></div>
+    </div>
+</div>
