--- a/practica_angular/practicaAngular/src/app/menu/menu.component.html
+++ b/practica_angular/practicaAngular/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
         <div class="col-sm-4">MENU</div>
     </div>
     <div class="row">
-        <div class="col-sm-6"><a routerLink="/registro">Registrar nuevo Usuario</a></div> 
+        <div class="col-sm-6"><a class="textoTitulo" routerLink="/registro">Registrar nuevo Usuario</a></div> 
         <div class="col-sm-6"><a routerLink="/listado">Lista de Usuarios Registrados</a></div>
     </div>
 </div>
